--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>poc-dynamic-import-dnd</title>
+    <title>MyApp - Role-Based Access</title>
   </head>
   <body>
     <div id="root"></div>
