--- a/microfrontend/microfrontend-header/index.html
+++ b/microfrontend/microfrontend-header/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/Header.jsx"></script>
+    <script type="module" src="/src/DevApp.jsx"></script>
   </body>
 </html>
